sources = files(
	'animation.hpp',
	'app.hpp',
	'assetmanager.hpp',
	'assets.hpp',
	'bullet.hpp',
	'collisions.hpp',
	'config.hpp',
	'effect.hpp',
	'enemy.hpp',
	'event.hpp',
	'factory.hpp',
	'globals.hpp',
	'grid.hpp',
	'gridentity.hpp',
	'ingamescene.hpp',
	'maingui.hpp',
	'mainscene.hpp',
	'math.hpp',
	'node.hpp',
	'player.hpp',
	'random.hpp',
	'resultscene.hpp',
	'scene.hpp',
	'scheduler.hpp',
	'scores.hpp',
	'scripter.hpp',
	'shaperenderer.hpp',
	'soundmanager.hpp',
	'spritenode.hpp',
	'startscene.hpp',
	'strutils.hpp',
	'textnode.hpp',
	'unit.hpp',
	'utils.hpp',
	'world.hpp',
	'animation.cpp',
	'app.cpp',
	'assetmanager.cpp',
	'bullet.cpp',
	'collisions.cpp',
	'effect.cpp',
	'enemy.cpp',
	'globals.cpp',
	'ingamescene.cpp',
	'main.cpp',
	'maingui.cpp',
	'mainscene.cpp',
	'math.cpp',
	'node.cpp',
	'player.cpp',
	'random.cpp',
	'resultscene.cpp',
	'scene.cpp',
	'scheduler.cpp',
	'scores.cpp',
	'scripter.cpp',
	'shaperenderer.cpp',
	'soundmanager.cpp',
	'spritenode.cpp',
	'startscene.cpp',
	'strutils.cpp',
	'textnode.cpp',
	'unit.cpp',
	'world.cpp',
	'bullets/basicbullet.hpp',
	'bullets/destroyablebullet.hpp',
	'bullets/mine.hpp',
	'bullets/missile.hpp',
	'bullets/pinkbullet.hpp',
	'bullets/playerbullet.hpp',
	'effects/mineexplosion.hpp',
	'effects/playerexplosion.hpp',
	'effects/smallexplosion.hpp',
	'scripts/basicpattern.hpp',
	'scripts/mainscripter.hpp',
	'scripts/minepattern.hpp',
	'scripts/missilepattern.hpp',
	'bullets/basicbullet.cpp',
	'bullets/destroyablebullet.cpp',
	'bullets/mine.cpp',
	'bullets/missile.cpp',
	'bullets/pinkbullet.cpp',
	'bullets/playerbullet.cpp',
	'effects/mineexplosion.cpp',
	'effects/playerexplosion.cpp',
	'effects/smallexplosion.cpp',
	'scripts/basicpattern.cpp',
	'scripts/mainscripter.cpp',
	'scripts/minepattern.cpp',
	'scripts/missilepattern.cpp'
)

cpp_args = []

if get_option('debug_mode')
	cpp_args += '-DDEBUG'
endif

yakblt_exe = executable('yakblt', sources,
	dependencies: dependencies,
	cpp_args: cpp_args,
	install: true,
	install_dir: install_dir
)
